change figures and message

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <ul>
                 <li>
                     <button id="figure" onclick="showFigures()">Figures </button>
-                    <!--<button id="realtime" onclick="showRealtime()">Real-Time Status</button>-->
+                    <button id="realtime" onclick="showRealtime()">Real-Time Status</button>
                 </li>
             </ul>
 
@@ -195,7 +195,7 @@
         <script src="lib/plot.js"></script>
     </div>
 
-    <div class="container" style="position: absolute; right: 0; top: 30%;">
+    <div id="message" style="position: absolute; right: 0; top: 30%; visibility: hidden">
         <h1>REAL-TIME</h1>
         <div class="container" style="width: 400px; height: 240px; line-height: 50px; overflow: Hidden;">
             <ul>
